# Tracera

./: .air.toml  .coverage  .env.example  .gitignore  .gitmodules  .golangci-backend.yml  .monitoring-checklist.txt  .pre-commit-config.yaml  00_START_HERE.md  4SGM_DEPENDABOT_WORKLOG.md  ADR.md  AGENTS.md  AGENT_QUICK_START.md  AGENT_WORK_PACKAGE_SUMMARY.md  API_IMPLEMENTATION_GUIDE.md  API_SPECIFICATION_COMPLETION_REPORT.md  ARCHITECTURE.md  BACKEND_AUTH_REQUIREMENTS.md  BACKEND_ENV_SETUP.md  BACKEND_FIXES_COMPLETE.md  BACKEND_FIXES_SUMMARY.md  BACKEND_HOT_RELOAD.md  Brewfile.dev  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  COMPARISON.md  COMPREHENSIVE_TEST_PLAN.md  COVERAGE_PROGRESS_DASHBOARD.md  CRITICAL_FIXES_APPLIED.md  CSRF_QUICK_START.md  Caddyfile  Caddyfile.dev  Cargo.toml  DELIVERY_SUMMARY_SPECIFICATIONS_ROUTER.md  DEPENDABOT_VULNERABILITY_WORKLOG.md  DOCKER_SDK_ASYNC_EXAMPLES.py  ENHANCEMENT_API_ENDPOINTS.py  ENHANCEMENT_IMPLEMENTATION_STARTER.py  (+62 more)
.archive/p1-test-fixes-2026-04-27-merged-ghost/: .cliff.toml  .coderabbit.yaml  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  clippy.toml  deny.toml  evidence_ledger.jsonl  gitleaks.toml  openapi.yaml  process-compose.yml  sbom.cdx.json  worklog.md
.archive/p1-test-fixes-2026-04-27-merged-ghost/.cargo/: audit.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/.githooks/: pre-commit  pre-push
.archive/p1-test-fixes-2026-04-27-merged-ghost/.github/workflows/: alert-sync-issues.yml  ci.yml  code-scanning-results.yml  deploy.yml  evidence-capture.yml  openapi-check.yml  pr-governance-gate.yml  quality-gate.yml  regen-docs-specs.yml  rust-security.yml  sast-full.yml  sast-quick.yml  sentry-error-tracking.yml  snyk-scan.yml
.archive/p1-test-fixes-2026-04-27-merged-ghost/.work-audit/: raw-goals.json  repo-manifest.json  worklog.md
.archive/p1-test-fixes-2026-04-27-merged-ghost/agileplus-mcp/: pyproject.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/apps/byteport/: .gitignore
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-api/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-artifacts/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-benchmarks/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-cache/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-cli/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-dashboard/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-domain/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-events/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-fixtures/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-git/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-graph/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-grpc/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-integration-tests/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-nats/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-p2p/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-sqlite/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-subcmds/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/crates/agileplus-sync/: Cargo.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/kitty-specs/: INDEX.md
.archive/p1-test-fixes-2026-04-27-merged-ghost/python/: pyproject.toml  ruff.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/rust/: deny.toml
.archive/p1-test-fixes-2026-04-27-merged-ghost/scripts/: authkit-smoke.sh  backfill_live_ledger.py  capture-local-boot-evidence.sh  dev-up.sh  fix_async_traits.py  generate-specs-from-git.sh  local-health-check.sh  orb-down.sh  orb-up.sh  quality-gate.sh  resolve-local-ports.sh  seed-projects.sh  setup-plane.sh
.archive/p1-test-fixes-2026-04-27-merged-ghost/templates/: base.html
.archive/p1-test-fixes-2026-04-27-merged-ghost/thegent-shm/: CLAUDE.md
.archive/phenoSDK-wtrees-orphan-2026-04-26/deprecation-tight-20260426/: .gitignore  .pre-commit-config-2.yaml  ATOMS_MCP_RISK_ASSESSMENT.md  BLUEPRINT.md  COMMAND_FRAMEWORK_ANALYSIS.md  CONTRIBUTING.md  DEPRECATION.md  EXTRACTION_MANIFEST.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_RESOURCE_COORDINATION_README.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_8_COMPLETION_SUMMARY.md  PHENO_SDK_DEPRECATED.md  PHENO_SDK_DETAILED_INDEX.md  PRIVATE_GITHUB_PACKAGES_SETUP.md  QUICK_WINS_IMPLEMENTATION.md  SECURITY.md  analytics.py  coverage.json  documentation_test.json  fixed-simple-fix.sh  mkdocs.yml  phase5_documentation_test.json  phase6_performance_test.json  prospector.yaml  publish-complete.sh  publish-to-github-packages.sh  pyproject.toml  pytest-domain.ini  pytest-metrics.ini  pytest-simple.ini  pytest.ini  security-policy.yml  use-git-installation.sh
HexaKit/crates/agileplus-dashboard/: Cargo.toml
HexaKit/crates/agileplus-dashboard-server/: Cargo.toml
HexaKit/crates/pheno-guard/: Cargo.toml
HexaKit/crates/phenotype-observability/: Cargo.toml
HexaKit/forgecode-fork/: Cargo.toml
dispatch-mcp/: .gitignore  README.md  pyproject.toml  server.py
dispatch-mcp/docs/governance/: dispatch_mcp_setup_2026_04_27.md
dispatch-mcp/src/dispatch_mcp/: __init__.py  server.py
libs/python/pheno-cli-builder/: EXTRACTION_REPORT.md  README.md  pyproject.toml
libs/python/pheno-cli-kit/: EXAMPLES.md  EXTRACTION_REPORT.md  pyproject.toml
libs/python/phenotype-logging/: README.md  pyproject.toml
libs/python/phenotype-py-kit/: README.md  pyproject.toml
libs/python/phenotype-testing/: README.md  pyproject.toml
pheno-wtrees/npm-sweep/agileplus-agents/: Cargo.toml
pheno-wtrees/py-sweep/phenotype-router-monitor/: Cargo.toml
pheno-wtrees/py-sweep/rust/: Cargo.toml
(+9864 files in other folders)
