[project]
name = "dispatch-mcp"
version = "0.1.0"
description = "MCP server wrapping dispatch-worker for agent tier-based delegation (Minimax, Kimi, Codex-5, Codex-Mini, Opus)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
dispatch-mcp = "dispatch_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dispatch_mcp"]

[tool.pytest.ini_options]
markers = [
    "requirement: FR traceability marker for functional requirements",
]
