[workspace]
resolver = "3"
members = [
    "libs/nexus",
    "libs/plugin-registry",
    "libs/plugin-sample",
    "libs/plugin-cli",
    "libs/plugin-git",
    "libs/plugin-grpc",
    "libs/plugin-integration",
    "libs/intent-registry",
    "libs/health-monitor",
    "libs/logger",
    "libs/metrics",
    "libs/config-core",
    "libs/tracing-core",
    "libs/cli-framework",
    "libs/hexagonal-rs",
    "libs/hexkit",
    "libs/cipher",
    "libs/gauge",
    "libs/xdd-lib-rs",
    "crates/agileplus-api",
    "crates/agileplus-cli",
    "crates/agileplus-domain",
    "crates/agileplus-fixtures",
    "crates/agileplus-grpc",
    "crates/agileplus-sqlite",
    "crates/agileplus-plane",
    "crates/agileplus-telemetry",
    "crates/agileplus-triage",
    "crates/agileplus-events",
    "crates/agileplus-cache",
    "crates/agileplus-subcmds",
    "crates/agileplus-graph",
    "crates/agileplus-nats",
    "crates/agileplus-sync",
    "crates/agileplus-artifacts",
    "crates/agileplus-dashboard",
    "crates/agileplus-github",
    "crates/agileplus-p2p",
    "crates/agileplus-integration-tests",
    "crates/agileplus-contract-tests",
    "crates/agileplus-benchmarks",
    "libs/nexus",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["AgilePlus Team"]
repository = "https://github.com/KooshaPari/AgilePlus"
keywords = ["agile", "project-management", "software-development"]
categories = ["Software Development", "Project Management"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.32"
futures-util = "0.3"
axum = { version = "0.8", features = ["json", "macros"] }
tonic = { version = "0.13", features = ["transport"] }
tonic-build = { version = "0.13", features = ["prost"] }
prost = "0.13"
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31", features = [
  "trace",
  "metrics",
  "http-proto",
  "reqwest-client",
] }
opentelemetry_sdk = { version = "0.31", features = [
  "trace",
  "metrics",
  "rt-tokio",
] }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
time = ">=0.3.47"
trait-variant = "0.1"
async-trait = "0.1"
sentry = { version = "0.33", features = ["backtrace", "contexts", "debug-images"] }

# OpenAPI scaffolding (utoipa). See WP: feat/rest-openapi-scaffold (#138, #118).
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-axum = "0.2"

# Plugin crates (external from separate repos) were removed in #144:
# the three git remotes (agileplus-plugin-{core,git,sqlite}) all return 404.
# Re-introduce either by vendoring into `crates/` or publishing the stubs
# under KooshaPari/ before re-adding. Tracked in GH issues #79/#82/#138/#142/#144.

# Git operations
gix = "0.71"
git2 = "0.20"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
