[package]
name = "forgecode-fork"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true }
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio-test.workspace = true
