[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "pheno-sdk"
version = "0.3.0"
description = "ATOMS-PHENO SDK for infrastructure migration and operations."
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "ATOMS-PHENO Team" }]
keywords = ["infrastructure", "migration", "operations", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    # Core utilities that are always needed
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "typing-extensions>=4.12.0",
    "pathlib2>=2.3.0; python_version<'3.4'",

    # Credential management
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    
    # Design Patterns Dependencies
    "dependency-injector>=4.41.0",
    "factory-boy>=3.3.0",
    "hypothesis>=6.92.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "mutmut>=2.4.0",
]

[tool.setuptools]
# Explicit configuration to avoid flat-layout auto-discovery
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pheno*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
pheno = ["py.typed"]

[tool.semantic_release]
version_source = "tag"
version_toml = "pyproject.toml:project.version"
branch = "main"
commit_parser = "angular"
major_on_zero = false
changelog_file = "CHANGELOG.md"
build_command = "python -m build"
upload_to_repository = true
repository = "pypi"
assets = ["dist/*"]
commit_author = "pheno-sdk bot <ci@pheno.dev>"

[project.optional-dependencies]
# Core Runtime Features
cli = [
    "rich>=13.7.0",                 # Rich console output
    "click>=8.1.7",                 # Click framework (backup)
    "typer[all]==0.9.4",           # Typer CLI framework
    "rich-click>=1.7.3",             # Rich Click integration
    "textual==0.41.0",               # TUI framework
    "inquirer==3.2.0",              # Interactive prompts
    "tqdm>=4.66.0",                # Progress bars
    "tabulate==0.9.0",              # Table formatting
]

# Database & Data Processing
database = [
    "asyncpg>=0.28.0",             # Async PostgreSQL
    "psycopg[binary]>=3.1.0",      # Sync PostgreSQL
    "pgvector==0.2.4",             # Vector operations
    "alembic==1.13.0",             # Database migrations
    "sqlparse==0.5.4",              # SQL parsing
    "pandas>=2.0.0",                # Data analysis
    "numpy>=1.24.0",                # Numerical computing
]

# Vector Search & AI Features
vector = [
    "sentence-transformers>=2.2.2",
    "litellm>=1.78.3",
    "faiss-cpu>=1.7.4; platform_system != \"Windows\"",
    "qdrant-client>=1.7.0",
    "weaviate-client>=4.6.1",
    "lancedb>=0.3.0",
]

# Quick Wins Performance Features
quickwins = [
    "aiocache>=0.12.2",             # Caching (replaces custom cache code)
    "meilisearch>=0.30.0",          # Full-text search (<50ms queries)
    "valkey>=5.0.0",                # Redis replacement (15% faster)
    "duckdb>=1.0.0",                # SQL analytics on files
    "polars>=1.0.0",                # DataFrames (10-100x faster)
    "pyarrow>=14.0.0",              # Arrow support for Polars
    "msgspec>=0.18.0",              # Serialization (10-80x faster)
    "gptcache>=0.1.44",             # LLM caching (90% cost reduction)
    "instructor>=1.0.0",            # Structured LLM outputs
    "radon>=6.0.0",                 # Code metrics
    "vulture>=2.10.0",              # Dead code detection
    "bandit[toml]>=1.7.6",          # Security scanning
]

# Async & Web Features
async = [
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "asyncio-mqtt>=0.16.0",
    "granian>=0.4.0",               # 2-3x faster ASGI server (replaces uvicorn)
    "orjson>=3.9.0",                # 3x faster JSON serialization
]

# REST API (OpenAPI) — not in core deps; install pheno-sdk[api] for adapters/api
api = [
    "fastapi>=0.115.0",
    "orjson>=3.9.0",
    "uvicorn[standard]>=0.30.0",
]

# Observability & Monitoring
observability = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.50b0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
]

# Development & Testing (install separately for development)
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "hypothesis>=6.100.0",  # Property-based testing
    "ruff>=0.6.3",
    "zuban>=0.1.0",  # High-performance Python type checker
    "prek>=0.2.10",  # Better pre-commit alternative (REPLACED pre-commit)
    "commitizen>=3.29.0",  # Conventional commits
    "safety>=3.2.0",  # Dependency scanning
    "build>=1.1.1",
    "twine>=4.0.2",
    "python-semantic-release>=9.7.1",
]

# Distributed Computing (NEW)
distributed = [
    "ray[default]>=2.30.0",  # Distributed Python - linear scaling
]

# Specialized Databases (NEW)
timeseries = [
    "questdb>=1.0.0",  # Time-series database (10x faster)
]

graph = [
    "gqlalchemy>=1.4.0",  # Memgraph ORM (4x faster than Neo4j)
]

objectstorage = [
    "minio>=7.2.0",  # MinIO S3-compatible object storage
]

# Security & Secrets (NEW)
security = [
    "sops>=0.7.1",  # SOPS secrets encryption (Python library)
    "age>=0.5.1",  # Age encryption (Python library)
    "authlib>=1.3.0",  # OAuth/OIDC
    "pycasbin>=1.36.0",  # RBAC/ABAC
]

# Infrastructure as Code (NEW)
infrastructure = [
    "pulumi>=3.130.0",  # Infrastructure as Code
    "pulumi-aws>=6.50.0",  # AWS provider
]

# Advanced LLM (NEW)
llm-advanced = [
    "dspy-ai>=2.5.0",  # Prompt optimization (Stanford NLP)
]

# All features (for consumers who want everything)
all = [
    "pheno-sdk[cli,database,vector,async,api,observability,quickwins,distributed,timeseries,graph,objectstorage,security,infrastructure,llm-advanced]",
]

docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocs-awesome-pages-plugin>=2.8.0",
]

[tool.ruff]
extend = "ruff.toml"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["test"]

# Zuban configuration (replaces mypy)
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
strict_equality = true
namespace_packages = true
explicit_package_bases = true
pretty = true
show_error_codes = true
ignore_missing_imports = false
exclude = "(pheno-sdk|zen-mcp-server|morph|m-test|example|htmlcov|\\.venv|tests/load)"

[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
ignore_missing_imports = true
allow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    pheno-sdk
    | zen-mcp-server
    | morph
    | m-test
    | example
    | htmlcov
    | \.venv
    | tests/load
)/
'''

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "unused-import",
    "import-error",
    "no-self-argument",
    "missing-function-docstring",
    "missing-module-docstring",
    "invalid-name",
    "redefined-builtin",
    "broad-except",
    "unexpected-keyword-arg",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-return-statements",
    "too-many-nested-blocks",
    "too-many-function-args",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 100
indent-string = '    '

[tool.pylint.design]
max-args = 7
max-attributes = 12
max-locals = 15
max-returns = 6
max-branches = 15
max-statements = 50
max-nested-blocks = 5
max-bool-expr = 5

[tool.pylint.variables]
init-import = false

[tool.pylint.basic]
good-names = [
    "i", "j", "k", "x", "y", "z", "k", "ex", "Run", "err",
    "_", "T", "F", "E", "N", "L", "R", "G", "M", "S", "Q", "X", "Y", "Z"
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "pheno-sdk/**",
    "zen-mcp-server/**",
    "morph/**",
    "m-test/**",
    "example/**",
    "htmlcov/**",
    ".venv/**",
    "tests/load/**",
]

[tool.docformatter]
wrap-summaries = 100
wrap-descriptions = 100
make-summary-multi-line = true
pre-summary-newline = false
close-quotes-on-newline = true
line-length = 100

[dependency-groups]
dev = [
    "prek>=0.2.10",
]
