[project]
name = "phenotype-logging"
version = "0.1.0"
description = "Structured logging utilities for Phenotype services using structlog"
readme = "README.md"
authors = [{ name = "Phenotype Team" }]
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
