[project]
name = "phenotype-testing"
version = "0.1.0"
description = "Shared pytest fixtures and testing utilities for Phenotype services"
readme = "README.md"
authors = [{ name = "Phenotype Team" }]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.2",
    "phenotype-config>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
