[package]
name = "phenotype-router-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
url = "2"
chrono = { workspace = true }
