[package]
name = "agileplus-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml = "0.8"
dirs-next = "2"
zeroize = { version = "1", features = ["derive"] }
keyring = { version = "3", optional = true }

[features]
keychain = ["dep:keyring"]

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
