[package]
name = "agileplus-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
chrono.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
