[package]
name = "agileplus-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "macros"] }
