[package]
name = "agileplus-subcmds"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agileplus-domain = { path = "../agileplus-domain" }
agileplus-triage = { path = "../agileplus-triage" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
