[package]
name = "agile-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cryptography utilities for AgilePlus - secure credentials, API keys, and tokens"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
