[package]
name = "health-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["sync", "rt", "time", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Utilities
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
